<resources>
    <string name="app_name">HealthyPlus</string>
    <string name="hamburger_menu_icon">Hamburger Menu Icon</string>
    <string name="profile_picture">Profile Picture</string>

    <!-- LOGIN STRINGS -->
    <string name="login_label">Login:</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_email">Email</string>
    <string name="signup_btn_label">REGISTRATI</string>
    <!-- SIGN UP STRINGS -->
    <string name="signup_label_name">nome</string>
    <string name="signup_label_surname">cognome</string>
    <string name="signup_label_psw1">password</string>
    <string name="signup_label_psw2">ripeti password</string>
    <string name="signup_label_date">data di nascita</string>
    <string name="signup_label_mail">e-mail</string>
    <string name="tos">Ho letto e accetto i <u>termini e condizioni</u></string>
    <!-- MAIN PAGE -->
    <string name="notification_label">Notizie e Notifiche:</string>
    <string name="home">Home</string>
    <string name="credits">Credits</string>
    <!-- USER PAGE STRINGS -->
    <string name="user_title">Area riservata</string>
    <string name="user_account_label">Account:</string>
    <string name="user_birth_label">Nascita:</string>
    <string name="user_setting_label">Impostazioni:</string>
    <string name="user_change_email">cambia mail</string>
    <string name="user_change_psw">cambia password</string>
    <string name="user_contact_us">contattaci!</string>
    <string name="user_tos">termini e condizioni</string>
    <string name="user_logout">Log out</string>
    <!-- FITNESS & MEAL MODULES STRINGS -->
    <string name="fitness_meal_today">oggi</string>
    <string name="fitness_meal_done">Fatto!</string>
    <string name="fitness_meal_coming">in arrivo:</string>
    <string name="fitness_meal_preset">preimpostati:</string>
    <string name="fitness_meal_history">storico:</string>
    <string name="fitness_meal_daysago"> giorni fa</string>
    <string name="fitness_meal_procede">Procedi</string>
    <string name="fitness_meal_delete">Elimina</string>
    <string name="fitness_meal_edit">Modifica</string>
    <string name="fitness_meal_save_edit">Salva modifiche</string>
    <string name="fitness_meal_schedule">PROGRAMMA</string>
    <string name="fitness_meal_addtopreset">SALVA PREIMPOSTATO</string>
    <string name="fitness_meal_placeholdertime">00:00</string>
    <!-- MEAL PLANNER STRINGS -->
    <string name="meal_planner_title">Meal Planner</string>
    <string name="meal_description_label"><u>descrizione</u></string>
    <string name="meal_planner_snack_btn">Snack</string>
    <string name="meal_planner_meal_btn">Pasto</string>
    <string name="meal_planner_saved_meals">Pasti salvati</string>
    <string name="meal_planner_label_food">Cibo</string>
    <string name="meal_planner_label_quantity">Quantità</string>
    <string name="meal_planner_label_kcal">Kcal</string>
    <string name="meal_planner_btn_addtotoal">Aggiungi cibo al pasto</string>
    <string name="meal_planner_save_snack">Salva snack rapido</string>
    <string name="meal_planner_placeholdername">PRANZO</string>
    <string name="meal_placeholderfood">Pasta al tonno</string>
    <string name="meal_placeholderquant">150 g</string>
    <string name="meal_placeholderkcal">570 kcal</string>
    <string-array name="udms">
        <item>Grammi</item>
        <item>Litri</item>
        <item>Unità</item>
        <item>Tazze</item>
        <item>Cucchiai</item>
    </string-array>
    <string-array name="udms_short">
        <item>g</item>
        <item>l</item>
        <item>u</item>
        <item>taz</item>
        <item>cuc</item>
    </string-array>
    <string name="meal_eaten">MANGIATO!</string>
    <!-- FITNESS TRACKER STRINGS -->
    <string name="fitness_tracker_title">Fitness Tracker</string>
    <string name="fitness_tracker_card_label"><u>scheda</u></string>
    <string name="fitness_tracker_placeholdername">GAMBE</string>
    <string name="fitness_tracker_rapid_activity">Attività rapida</string>

</resources>