<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/marginStandard"
    android:layout_marginTop="@dimen/marginStandard"
    android:layout_marginEnd="@dimen/marginStandard"
    android:background="@drawable/background"
    android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/name"
        style="@style/mealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStandard"
        android:text="@string/meal_placeholderfood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginSmall"
        android:text="@string/meal_placeholderquant"
        app:layout_constraintBottom_toTopOf="@id/kcal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kcal"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginSmall"
        android:layout_marginBottom="@dimen/marginSmall"
        android:text="@string/meal_placeholderkcal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>